This file defines the changes made to Via - Virtual classroom

last update 09/10/2018 (2018042004)
-Bug fix

last update 07/09/2018 (2018042003)
- Prevent Moodle to overwrite UserData in Via
- Add option to synchronise immediately playback records with Via

last update 19/07/2018 (2018042002)
- Bug fixes

last update 20/04/2018 (2018042001)
- Integration of Moodle 3.4
- Improvement for Grouping and Group with Moodle 3.X
- Improvements to delegate activities
- Bug fixes for user synchronisation when the activity has been deleted from Via
- Bug fixes for category use (when activated in parameters)
- you can access to the activity after the end if there is still someone inside
- Correction of Users SetupState synchronisation
- Bug fixe for viaassign activity with multiple pages
- Management of viaassign events: we can attach them to the class or to the activity depending on the parameters.
- Integration of new release of Chrome ( micro and camera not available during configuration)
- Activity Completion by grade has been desactivated

last update 14/09/2017 (2017030108)
- Bug fixes for Grouping and Group
- Bug fix for activity completion on view
- Some improvements on the display of Via parameters

last update 10/07/2017 (2017030107)
- Improvement on a new activityType: desactivated. Only availabale with manual operations: ask SVI for more informations


last update 06/06/2017 (2017030106)
- Improvements on user synchronization:
- User's picture in png are now included
- First and last names can now be not synchronized 

last update 31/05/2017 (2017030105)
- Modifications on activity duplication: the old host is now saved
- Correction on delete issues
- Bug fixes for downloading documents
- We don't keep user in deleted activity to avoid restoration issues
- New Option to choose enrol type in Via
- Availability confirmation is now available for everyone except the host


last update 05/04/2017 (2017030104)
- Bug fixes for email reminder sended from viaassign