@@ -1,4 +1,7 @@
 This file defines the changes made to Via - Virtual classroom
+last update 19/02/2019 (2018042005)
+-The courseID is no more stored during backup /restore
+-Bug fixes for compatibiliy with viaassign
 
 last update 09/10/2018 (2018042004)
 -Bug fix
